--- a/schedulle/templates/agendamentos/detalhar_agendamento.html
+++ b/schedulle/templates/agendamentos/detalhar_agendamento.html
@@ -1,5 +1,5 @@
 <!-- detalhar_agendamento.html -->
-<h1>Detalhes do Agendamentos</h1>
+<h1>Detalhes do Agendamentosssssssss</h1>
 <p><strong>Cliente:</strong> {{ agendamento.cliente.nome }}</p>
 <p><strong>Serviço:</strong> {{ agendamento.servico.nome }}</p>
 <p><strong>Data e Hora:</strong> {{ agendamento.data_hora }}</p>
